[metadata]
name = xiami
summary = Automatic xiami daily checkins
author = Shaohan Hu
author-email = hushaohan@gmail.com
license = none
home-page = http://hushaohan.github.io
description-file = README.rst
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = xiami.module:function
# For example:
console_scripts =
    xiamiac = xiami.autocheckin:cli
# as well as other entry_points.


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory
# and source location from the root of the repository:
packages =
    xiami
# data_files =
#    share/xiami_docs = docs/*
