[metadata]
name = wat
summary = Web Automation Toolkit
author = Shaohan Hu
author-email = hushaohan@gmail.com
license = none
home-page = http://hushaohan.github.io
description-file = README.rst

classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[entry_points]
console_scripts =
    wat = wat.main:cli

[files]
packages =
    wat
